# springSim

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
assets/shaders/: bounds.fs  bounds.vs  mesh.fs  mesh.vs
src/: main.cpp
src/app/: viewer.cpp  viewer.h  viewer_ui.cpp  viewer_ui.h  viewer_window.cpp  viewer_window.h
src/app/physics/: bounds.cpp  bounds.h  force.cpp  force.h  physics_system.cpp  physics_system.h
src/core/: app.cpp  app.h  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  gizmo.cpp  gizmo.h  mesh.cpp  mesh.h  settings.h  settings.h.in  shader.cpp  shader.h  timer.cpp  timer.h  transform.cpp  transform.h  ui.cpp  ui.h  util.h  window.cpp  window.h
src/core/gizmos/: arrow.cpp  arrow.h  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  ico_sphere.cpp  ico_sphere.h
src/math/: matrix.cpp  matrix.h  quat.h  vec.cpp  vec.h
